# beancount-ast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  pyproject.toml  taskfile.yaml
.github/: mergify.yml  renovate.json
.github/workflows/: _build_wheels.yaml  autofix.yaml  ci.yml  release.yaml  tests.yml
py-src/beancount_ast/: __init__.py  __init__.pyi  _ast.pyi  _directive.py
scripts/: generate_ast_stubs.py
src/: lib.rs
tests/: test_parse_snapshots.py
tests/__snapshots__/: test_parse_snapshots.ambr
