[package]
name = "beancount-ast-py"
version = '0.0.0'
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "50f898fe1636efa1a59222c70fa0e288f442cc08" }
pyderive = "0.9.2"
pyo3 = { version = "0.28.0", features = ["abi3-py310", "multiple-pymethods", "generate-import-lib"] }

[features]
default = []
