[package]
name = "beancount-ast-py"
version = '0.0.0'
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "e90dca2dcad866d2ab3130c905752da09fa07de1" }
pyderive = "0.9.2"
pyo3 = { version = "0.28.2", features = ["abi3-py310", "multiple-pymethods", "generate-import-lib"] }

[features]
default = []
