[package]
name = "beancount-ast-py"
version = '0.0.0'
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "d996b981243349786ff983e31e3b08baaa25d7c9" }
pyderive = "0.9.2"
pyo3 = { version = "0.28.3", features = ["abi3-py310", "multiple-pymethods", "generate-import-lib"] }

[features]
default = []
