[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "beancount_ast"
description = "Parse Beancount content into AST"
readme = "README.md"
requires-python = ">=3.10"
version = '0.0.1a3'
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.uv]
package = false

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "beancount_ast._ast"
bindings = "pyo3"
python-source = "py-src"
strip = true

[dependency-groups]
dev = ["syrupy>=5.1.0", "pytest>=9.0.2"]
