[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "beancount_ast"
version = '0.0.1a6'
requires-python = ">=3.10"
description = "Parse Beancount content into AST"
authors = [{ name = "trim21", email = 'trim21.me@gmail.com"' }]
readme = "README.md"
license = "MIT"
dependencies = []

[project.urls]
homepage = "https://github.com/trim21/beancount-ast"
repository = "https://github.com/trim21/beancount-ast"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.uv]
package = false

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "beancount_ast._ast"
bindings = "pyo3"
python-source = "py-src"
strip = true

[dependency-groups]
dev = ["syrupy>=5.1.0", "pytest>=9.0.2"]
