[build-system]
requires = ["maturin==1.12.4"]
build-backend = "maturin"

[project]
name = "beancount_ast"
version = '0.0.1'
requires-python = ">=3.10"
description = "Parse Beancount content into AST"
authors = [{ name = "trim21", email = 'trim21.me@gmail.com"' }]
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.urls]
homepage = "https://github.com/trim21/beancount-ast"
repository = "https://github.com/trim21/beancount-ast"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.uv]
package = false

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "beancount_ast._ast"
bindings = "pyo3"
python-source = "py-src"
strip = true

[dependency-groups]
dev = ["syrupy>=5.1.0", "pytest>=9.0.2"]
